add nested Ingredients and Directions fiels to new and edit forms

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,10 +23,11 @@
 	box-shadow: rgba(0, 0, 0, 0.09) 0 2px 0;
 }
 
-$red: #DB6161;
+//$red: #DB6161;
+$green: #35B045;
 
 body {
-	background: rgb(235, 238, 243);
+	background: #EBEEF3;
 }
 
 .main_content {
@@ -53,7 +54,7 @@ body {
 		font-weight: bold;
 		font-size: 25px;
 		a {
-			color: $red;
+			color: $green;
 		}
 	}
 }
@@ -67,9 +68,13 @@ body {
 		max-width: 100%;
 		border-radius: 5px 5px 0 0;
 		overflow: hidden;
-	}
+  }
 	img {
 		width: 100%;
+//		-webkit-transition: all .3s ease-out;
+//		-moz-transition: all .3s ease-out;
+//		-o-transition: all .3s ease-out;
+//		transition: all .3s ease-out;
 		&:hover {
 			transform: scale(1.075);
 		}
@@ -81,7 +86,7 @@ body {
 		font-weight: normal;
 		line-height: 1.5;
 		a {
-			color: $red;
+			color: $green;
 		}
 	}
 }
@@ -108,7 +113,7 @@ recipe_top {
 	h1 {
 		font-size: 36px;
 		font-weight: normal;
-		color: $red;
+		color: $green;
 	}
 	.description {
 		color: #8A8A8A;
@@ -116,7 +121,7 @@ recipe_top {
 	}
 }
 
-#ingredients, #discription {
+#ingredients, #directions {
 	margin-bottom: 50px;
 	ul, ol {
 		padding-left: 18px;
