correct indentation typos to get forms to load correctly, add jquery gem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+body {
+	background-color: lightgrey;
+  font-family: 'Arial Rounded MT Bold', sans-serif;
+}
+
 @mixin box-shadow {
 	-webkit-box-shadow: rgba(0, 0, 0, 0.9) 0 2px 0;
 	-moz-box-shadow: rgba(0, 0, 0, 0.9) 0 2px 0;
