--- a/app/views/recipes/_direction_fields.html.haml
+++ b/app/views/recipes/_direction_fields.html.haml
@@ -1,4 +1,5 @@
 .form-inline.clearfix
   .nested-fields
     = f.input :step, input_html: { class: 'form-control'}
+    .links
     = link_to_remove_association 'Remove step', f, class: "btn btn-default form-button"
