--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -11,14 +11,16 @@
     = f.input :title, input_html: { class: 'form_control' }
     = f.input :description, input_html: { class: 'form_control' }
     = f.input :image, input_html: { class: 'form_control' }
+    
     .row
       .col-md-6
         %h3 Ingredients
-        #ingedientss
+        #ingedients
           = f.simple_fields_for :ingredients do |ingredient|
             = render 'ingredient_fields', f: ingredient
           .links
             = link_to_add_association 'Add Ingredient', f, :ingredients, class: "btn btn-default add-button"
+      
       .col-md-6
         %h3 Directions
         #directions
@@ -26,4 +28,5 @@
             = render 'direction_fields', f: direction
           .links
             = link_to_add_association 'Add Step', f, :directions, class: "btn btn-default add-button"
+	
   = f.button :submit, class: "btn btn-primary"
