--- a/app/views/recipes/_ingredient_fields.html.haml
+++ b/app/views/recipes/_ingredient_fields.html.haml
@@ -1,4 +1,5 @@
-.nested-fields
-  = f.input :name, input_html: { class: 'form-control' }
-  .links
-  = link_to_remove_association 'Remove ingredient', f, class: "btn btn-default remove-button"
+.form-inline.clearfix
+  .nested-fields
+    = f.input :name, input_html: { class: 'form-control' }
+    .links
+    = link_to_remove_association 'Remove ingredient', f, class: "btn btn-default remove-button"
