--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -8,7 +8,7 @@
         %p.description= @recipe.description
   .row
     .col-md-6
-      #directions
+      #ingredients
         #h2 Ingredients
         %ul
           - @recipe.ingredients.each do |ingredient|
