--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
 %head
-  %title Recipe App
+  %title Recipe Box
   = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'true'
   = javascript_include_tag 'application', 'data-turbolinks-track': 'true'
   = csrf_meta_tags
@@ -11,6 +11,7 @@
       .navbar-brand= link_to "Recipe Box", root_path
       %ul.nav.navbar-nav.navbar-right
         %li= link_to "New Recipe", new_recipe_path
+        %li= link_to "Search Recipes by Ingredients", new_recipe_path
   .container
     - flash.each do |name, msg|
       = content_tag :div, msg, class: "alert"
