--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -15,7 +15,7 @@
     .row
       .col-md-6
         %h3 Ingredients
-        #ingedients
+        #ingredients
           = f.simple_fields_for :ingredients do |ingredient|
             = render 'ingredient_fields', f: ingredient
           .links
