--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -184,3 +184,9 @@ p {
 		margin-top: 25px;
 	}
 }
+
+.form-inline .form-control {
+	  display: inline-block;
+    width: 100%;
+    vertical-align: middle;
+}
