--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,6 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 
 @import "bootstrap-sprockets";
@@ -167,6 +165,7 @@ recipe_top {
 }
 
 p {
+	  font-size: 15px;
     white-space: pre-line; //this makes prep & cook times appear on separate lines
 }
 
