--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
       .navbar-brand= link_to "Recipe Box", root_path
       %ul.nav.navbar-nav.navbar-right
         %li= link_to "New Recipe", new_recipe_path
-        %li= link_to "Search Recipes by Ingredients", new_recipe_path
+        %li= link_to "Search Recipes by Ingredients", search_index_path
   .container
     - flash.each do |name, msg|
       = content_tag :div, msg, class: "alert"
