--- a/app/views/recipes/_ingredient_fields.html.haml
+++ b/app/views/recipes/_ingredient_fields.html.haml
@@ -2,4 +2,4 @@
   .nested-fields
     = f.input :name, input_html: { class: 'form-control' }
     .links
-    = link_to_remove_association 'Remove ingredient', f, class: "btn btn-default remove-button"
+    = link_to_remove_association 'Remove', f, class: "btn btn-default remove-button"
