--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,6 +106,10 @@ body {
 	}
 }
 
+h3 {
+	font-weight: bold;
+}
+
 #recipe_top {
 	margin-bottom: 50px;
 }
@@ -158,7 +162,8 @@ body {
 	ul, ol {
 		padding-left: 18px;
 		li {
-			border-bottom: 1px solid #EAEAEA; // ingred/directions separator
+			//border-bottom: 1px solid #EAEAEA; // ingred/directions separator
+			border-bottom: 1px solid #AAA; // ingred/directions separator
 			padding: 1em 0;
 		}
 	}
