--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@ $green: #006400;
 
 body {
 	background: #EBEEF3;
-	background-color:  #FFF //#EEE8AA; //palegoldenrod
+	background-color: #EEE8AA; //palegoldenrod
 }
 
 .main_content {
