--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,27 @@
 </head>
 <body>
   <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-brand">
-        <%= link_to "Recipe Box", root_path %>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#recipeboxNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand">
+          <%= link_to "Recipe Box", root_path %>
+        </div>
       </div>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <%= link_to "New Recipe", new_recipe_path %>
-        </li>
-        <li>
-          <%= link_to "Search Recipes by Ingredients", search_index_path %>
-        </li>
-      </ul>
+      <div class="collapse navbar-collapse" id="recipeboxNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to "New Recipe", new_recipe_path %>
+          </li>
+          <li>
+            <%= link_to "Search Recipes by Ingredients", search_index_path %>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
   <div class="container">
