--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New Recipe</h1>
 <%= render 'form' %>
 <br/>
-<%= link_to 'Cancel', root_path, class: "btn btn-default" %>
+<%= link_to 'Cancel', root_path, class: "btn btn-danger" %>
