take advantage of bootstrap buttons other than default, add spacing between buttons so they are not stacked

--- a/app/views/recipes/_direction_fields.html.erb
+++ b/app/views/recipes/_direction_fields.html.erb
@@ -2,6 +2,6 @@
   <div class="nested-fields">
     <%= f.input :step, input_html: { class: 'form-control' } %>
     <div class="links"></div>
-    <%= link_to_remove_association 'Remove', f, class: "btn btn-default remove-button" %>
+    <%= link_to_remove_association 'Remove', f, class: "btn btn-danger remove-button" %>
   </div>
 </div>
