--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -42,9 +42,9 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <%= link_to 'Back', root_path, class: "btn btn-default" %>
-      <%= link_to 'Edit', edit_recipe_path, class: "btn btn-default" %>
-      <%= link_to 'Delete', recipe_path, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-default" %>
+      <%= link_to 'Back', root_path, class: "btn btn-primary" %>
+      <%= link_to 'Edit', edit_recipe_path, class: "btn btn-primary" %>
+      <%= link_to 'Delete', recipe_path, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
     </div>
   </div>
 </div>
