--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -24,7 +24,7 @@
           <%= f.simple_fields_for :ingredients do |ingredient| %>
             <%= render 'ingredient_fields', f: ingredient %>
           <% end %>
-          <div class="links"><br>
+          <div class="links">
             <%= link_to_add_association 'Add an Ingredient', f, :ingredients, class: "btn btn-primary add-button" %>
           </div>
         </div>
@@ -35,7 +35,7 @@
           <%= f.simple_fields_for :directions do |direction| %>
             <%= render 'direction_fields', f: direction %>
           <% end %>
-          <div class="links"><br>
+          <div class="links">
             <%= link_to_add_association 'Add a Step', f, :directions, class: "btn btn-primary add-button" %>
           </div>
         </div>
