--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,7 +1,7 @@
 <div class="main_content">
   <div class="row" id="recipe_top">
     <div class="col-md-4">
-      <%= image_tag @recipe.image.url(:medium), class: "recipe_image" %>
+      <%= image_tag @recipe.image.url(:medium), class: "recipe_img" %>
     </div>
     <div class="col-md-8">
       <div id="recipe_info">
