--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,7 +3,7 @@
     <% recipes.each do |recipe| %>
       <div class="col-md-4">
         <div class="recipe">
-          <div class="image_wrapper">
+          <div class="image-wrapper">
             <%= link_to recipe do %>
               <%= image_tag recipe.image.url(:medium) %>
             <% end %>
