--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,10 +1,10 @@
-<div class="main_content">
-  <div class="row" id="recipe_top">
+<div class="main-content">
+  <div class="row" id="recipe-top">
     <div class="col-md-4">
-      <%= image_tag @recipe.image.url(:medium), class: "recipe_img" %>
+      <%= image_tag @recipe.image.url(:medium), class: "recipe-img" %>
     </div>
     <div class="col-md-8">
-      <div id="recipe_info">
+      <div id="recipe-info">
         <h1>
           <%= @recipe.title %>
         </h1>
