style Ingredients and Directions titles on edit and new pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,13 +99,14 @@ body {
 			transform: rotateY(180deg);
 		}
 	}
+  
 	h2 {
 		font-size: 20px;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0;
 		padding: 15px 5%;
-    text-shadow: 5px 5px 10px #aaa;
+    text-shadow: 5px 5px 10px #AAA;
     //text-shadow: 0.5px 0.5px 0.5px #999;
 		a {
 			color: $green;
@@ -142,7 +143,7 @@ body {
 
 #recipe-info {
 	h1 {
-		color: $green;
+		color: #006400;
 		font-size: 36px;
 		font-weight: normal;
 		text-shadow: 1px 1px 1px #999;
@@ -165,6 +166,13 @@ body {
 #recipe_image {
 	height: 100%;
 	width: 100%
+}
+
+.col-md-6 {
+  h2 {
+    color: #006400;
+    text-shadow: 2px 2px 2px #AAA;
+  }
 }
 
 #ingredients, #directions {
