--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,9 +115,10 @@ body {
 }
 
 #h2 {
-  font-size: 20px;
+  color: #006400;
+  font-size: 25px;
   line-height: 1.5;
-  margin: 0;
+  margin-left: -30px;
   padding: 15px 5%;
   // text-shadow: 5px 5px 10px #aaa;
   // text-shadow: 1px 1px 1px #999;
