--- a/app/views/recipes/_ingredient_fields.html.erb
+++ b/app/views/recipes/_ingredient_fields.html.erb
@@ -2,6 +2,6 @@
   <div class="nested-fields">
     <%= f.input :name, input_html: { class: 'form-control' } %>
     <div class="links"></div>
-    <%= link_to_remove_association 'Remove Ingredient', f, class: "btn btn-danger remove-button" %>
+    <%= link_to_remove_association 'Remove', f, class: "btn btn-danger remove-button" %>
   </div>
 </div>
