add color to H1 element in New and Edit pages, normalize color and shading across all H1 and H2 elements

--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Recipe</h1>
+<div class="edit-new-header"><h1>Edit Recipe</h1></div>
 <%= render 'form' %>
 <br/>
 <%= link_to 'Cancel', root_path, class: "btn btn-danger" %>
