--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,11 +70,17 @@ body {
 		a {
 			color: $green;
 			text-decoration: none;
+      text-shadow: 1px 1px 1px #AAA;
 		}
     &:hover {
-      transform: scale(1.06);
+      transform: scale(1.075);
     }
 	}
+}
+
+.edit-new-header {
+  color: $green;
+  text-shadow: 2px 2px 2px #AAA;
 }
 
 .recipe {
@@ -95,7 +101,7 @@ body {
 		-o-transition: all .4s ease-out; // Opera
 		transition: all .4s ease-out;
 		&:hover {
-      transform: scale(1.075); //grow the image slightly when hovered
+      transform: scale(1.075); //grow the image when hovered
 			// transform: rotateY(180deg);
 		}
 	}
@@ -106,8 +112,7 @@ body {
 		line-height: 1.5;
 		margin: 0;
 		padding: 15px 5%;
-    text-shadow: 5px 5px 10px #AAA;
-    //text-shadow: 0.5px 0.5px 0.5px #999;
+    text-shadow: 1px 1px 1px #AAA;
 		a {
 			color: $green;
 		}
@@ -115,13 +120,12 @@ body {
 }
 
 #h2 {
-  color: #006400;
+  color: $green;
   font-size: 25px;
   line-height: 1.5;
   margin-left: -30px;
   padding: 15px 5%;
-  // text-shadow: 5px 5px 10px #aaa;
-  // text-shadow: 1px 1px 1px #999;
+   text-shadow: 1px 1px 1px #AAA;
 }
 
 #recipe-top {
@@ -144,10 +148,10 @@ body {
 
 #recipe-info {
 	h1 {
-		color: #006400;
+		color: $green;
 		font-size: 36px;
 		font-weight: normal;
-		text-shadow: 1px 1px 1px #999;
+		text-shadow: 1px 1px 1px #AAA;
 	}
 	.description {
 		color: #8A8A8A;
@@ -171,7 +175,7 @@ body {
 
 .col-md-6 {
   h2 {
-    color: #006400;
+    color: $green;
     text-shadow: 2px 2px 2px #AAA;
   }
 }
