--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,15 +23,9 @@ body {
 
 @mixin box-shadow {
 	box-shadow: 7px 7px 10px #777;
-  -webkit-box-shadow: 7px 7px 10px #777; // Chrome and Safari
-	-moz-box-shadow: 7px 7px 10px #777; // Firefox
-  -o-transition: 7px 7px 10px #777; // Opera
 }
 
 @mixin text-shadow {
-  -webkit-text-shadow: 1px 1px 1px #AAA;
-  -moz-text-shadow: 1px 1px 1px #AAA;
-  -o-text-shadow: 1px 1px 1px #AAA;
   text-shadow: 1px 1px 1px #AAA;
 }
 
@@ -82,9 +76,6 @@ body {
     }
     &:hover {
       transform: scale(1.075);
-      -webkit-transition: all .15s linear; // Chrome and Safari
-		  -moz-transition: all .15s linear; // Firefox
-		  -o-transition: all .15s linear; // Opera
       transition: all .15s linear;
     }
 	}
@@ -99,34 +90,22 @@ body {
 
 //start random styling of recipes. this gives the index (landing) page a little twist (pun intended)
 .row .col-md-4 .recipe { 
-  -webkit-transform: rotate(-6deg); // Chrome and Safari
-  -moz-transform: rotate(-6deg); // Firefox
-  -o-transform: rotate(-6deg); // Opera
   transform: rotate(-6deg);
 }
 
 .row .col-md-4:nth-child(even) .recipe { 
-  -webkit-transform: rotate(4deg);
-  -moz-transform: rotate(4deg);
-  -o-transform: rotate(4deg);
   transform: rotate(4deg);
   position: relative;
   top: 5px;
   }
 
 .row .col-md-4:nth-child(3n) .recipe { 
-  -webkit-transform: rotate(-3deg);
-  -moz-transform: rotate(-3deg);
-  -o-transform: rotate(-3deg);
   transform: rotate(-3deg);
   position: relative;
   top: -5px;
   }
 
 .row .col-md-4:nth-child(5n) .recipe { 
-  -webkit-transform: rotate(5deg);
-  -moz-transform: rotate(5deg);
-  -o-transform: rotate(5deg);
   transform: rotate(5deg);
   position: relative;
   top: -10px;
@@ -149,16 +128,10 @@ body {
 		width: 100%;
 		&:hover {
       transform: scale(1.25); //grow the image when hovered
-      -webkit-transition: all .4s ease-out; // Chrome and Safari
-		  -moz-transition: all .4s ease-out; // Firefox
-		  -o-transition: all .4s ease-out; // Opera
       transition: all .4s ease-out;
-      //Comment out the five lines above and uncomment below for a different hover action
+      //Comment out the two lines above and uncomment below for a different hover action
 		  //transform: rotateY(180deg); //rotate the image when hovered
-      //-webkit-transition: -webkit-transform .4s linear; /*linear-same speed from start to end*/
-      //-moz-transition: -moz-transform .4s linear;
-      //-o-transition: -o-transform .4s linear;
-      //transition: -o-transform .4s linear;
+      //transition: transform .4s linear;
 		}
 	}
   //the link (recipe title) under each recipe image on the index/landing page
