add media query to prevent buttons from displaying when printing recipe

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -251,3 +251,9 @@ p {
     width: 100%;
     vertical-align: middle;
 }
+
+@media print {
+  .btn-primary, .btn-danger {
+    display: none;
+  }
+}
